# GES-comp-echem

./: .buildinfo  .gitignore  README.md  api.html  build.sh  contributor-guide.html  genindex.html  getting-started.html  intro.html  main.py  meta.yaml  objects.inv  py-modindex.html  release-notes.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  systems.html  tox.ini  user-guide.html
.github/workflows/: deploy.yml  requirements.txt  tests.yml
API/: algorithms.html  core.html  functions.html  systems.html  tools.html  wrappers.html
API/algorithms/: oneeloxidation.html
API/wrappers/: crest.html  dftbplus.html  orca.html  packmol.html  xtb.html
Guide/: algorithms.html  functions.html  run.html  setup.html  systems.html  tools.html  wrappers.html
Guide/wrappers/: crest.html  dftbplus.html  orca.html  packmol.html  xtb.html
_sources/: api.md  intro.md  user-guide.md
_sources/API/: algorithms.md  tools.md
_sources/Guide/: functions.md  systems.md  tools.md
compechem/: __init__.py  config.py  constants.py  ensemble.py  molecule.py  systems.py  tools.py
compechem/algorithms/: __init__.py  oneeloxidation.py
compechem/calculators/: algorithms.py  calculators.py  crest.py  dftbplus.py  orca.py  packmol.py  tools.py  xtb.py
docs/: _config.yml  _toc.yml  api.md  api.rst  contributor-guide.md  getting-started.ipynb  getting-started.md  intro.md  release-notes.md  requirements-docs.txt  systems.md  user-guide.md
output_files/: NEB_reactant_TS_0_1_orca_PBE_def2-SVP_vacuum_neb-ts.out
tests/: test_geometry.py
validation/: validation.sh
(+187 files in other folders)
