[metadata]
name = GES-comp-echem

[options]
packages =
    compechem
    compechem.core
    compechem.tools
    compechem.wrappers
    compechem.engines
    compechem.functions
install_requires =
    numpy
    pandas>=1.3.0
    sh
    rdkit

python_requires = >=3.8
package_dir = =.
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[flake8]
max-line-length = 160